add Client function to remove item from order

--- a/ClientView.html
+++ b/ClientView.html
@@ -10,11 +10,15 @@
 </div>
 
 <div id = "queriesClient">
+    <form action="insert_order_item.php", method="get">
     Item IID:<input type="text" name="IIDOrder">
     <button type="add item" id="addItemButton">Order Item</button> <br>
+</form>
     
+    <form action="cancel_order_client.php", method="get">
     Order ID: <input type="text" name="cancelOrderID"> 
     <button type="add item" id="updateStockButton">Cancel Order</button> <br>
+</form>
     
     New Credit Card#: <input type="text" name="creditCardNumberUpdate"> 
     <button type="add item" id="updateCreditCard">Update credit card info</button> <br>
