Tables view for Manager and some minor corrections

--- a/LoginPage.html
+++ b/LoginPage.html
@@ -5,10 +5,10 @@
 <br><br> 
 <div id="container">
     <!--<div id="button1"><a href="ManagerView.html">Log In</a></div>-->
-    <a href="ManagerView.html">
+    <a href="ManagerView.php">
         <button type="manager" id="button1">Manager</button>
     </a>
-    <a href="ClientView.html">
+    <a href="ClientView.php">
         <button type="client" id="button2">Client</button>
     </a>
 </div>
