php population script running fix

--- a/LoginPage.html
+++ b/LoginPage.html
@@ -1,8 +1,14 @@
 <!doctype html>
+<html>
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <br><br> 
+<div id="repopulate">
+    <form action="populationPhpScript.php" method="get">
+        <button type="manager" id="button1">Repopulate Database</button>
+    </form>
+</div>
 <div id="container">
     <!--<div id="button1"><a href="ManagerView.html">Log In</a></div>-->
     <a href="ManagerView.php">
@@ -12,3 +18,4 @@
         <button type="client" id="button2">Client</button>
     </a>
 </div>
+</html>
